# 42-Common-Core

./: README.md
Milestone 0/libft/: ft_atoi.c  ft_isalnum.c  ft_isalpha.c  ft_lstdelone.c  ft_lstlast.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memset.c  ft_putnbr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strtrim.c  ft_tolower.c  libft.h
Milestone 1/Born2BeRoot/: README.md  signature.txt
Milestone 1/ft_printf/: Makefile  a.out  ft_printf.c  ft_printf.h  ft_put_c.c  ft_put_d.c  ft_put_p.c  ft_put_s.c  ft_put_u.c  ft_put_x.c
Milestone 1/get_next_line/: get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c
Milestone 2/Python_Modules/Python 06/: elements.py  ft_alembic_4.py  ft_distillation_0.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_1.py
Milestone 2/Python_Modules/Python 07/: battle.py  capacitator.py  tournament.py
Milestone 2/amaze-ing/: Makefile  README.md  a_maze_ing.py  config.txt  mazegen-1.0.0-py3-none-any.whl  pyproject.toml  requirements.txt
Milestone 2/amaze-ing/src/: __init__.py  display.py  maze_gen.py  parsing.py
Milestone 2/pushswap/: Makefile  README.md  push_swap
Milestone 2/pushswap/include/: push_swap.h
Milestone 2/pushswap/libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memmove.c  ft_putchar_fd.c  libft.h  (+10 more)
Milestone 3/Fly-Ing/: parser.py
(+80 files in other folders)
